fixed overflow pretty thingie

--- a/styles.scss
+++ b/styles.scss
@@ -20,6 +20,7 @@ div.window {
         padding-right: 10px;
         text-align: right;
         font-size: 30px;
+        overflow-x: auto;
 
     }
 }
